--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Simon Game</h1>
+    <div><button id="btn">Start</button></div>
     <h2>Start the Game</h2>
     <div class="box_containers">
         <div class="box_line_1">
