--- a/index.html
+++ b/index.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Game</title>
-    <link rel="stylesheet" href="CSS.css"/>
+    <link rel="stylesheet" href="CSS.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Simon Game</h1>
-    <div><button id="btn">Start</button></div>
-    <h2>Start the Game</h2>
+    <nav class="navbar navbar-expand-lg navbar-bg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">simon</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">help</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <h2 class="mt-3 mb-3 pt-2 pb-2">Start the Game</h2>
+    <div>
+        <button class="btn btn-outline-danger btn-lg">Start</button>
+    </div>
+
     <div class="box_containers">
         <div class="box_line_1">
-            <div class="box blueviolet" id="blueviolet"></div>
-            <div class="box yellowgreen" id="yellowgreen"></div>
+            <div class="box blueviolet"></div>
+            <div class="box yellow"></div>
         </div>
         <div class="box_line_2">
-            <div class="box brown" id="brown"></div>
-            <div class="box purple" id="purple"></div>
+            <div class="box violet"></div>
+            <div class="box purple"></div>
         </div>
     </div>
     <script src="JavaScript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
