--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <div class="box_containers">
         <div class="box_line_1">
-            <div class="box blueviolet"></div>
-            <div class="box yellow"></div>
+            <div class="box blueviolet" id="blueviolet"></div>
+            <div class="box yellow" id="yellow"></div>
         </div>
         <div class="box_line_2">
-            <div class="box violet"></div>
-            <div class="box purple"></div>
+            <div class="box violet" id="violet"></div>
+            <div class="box purple" id="purple"></div>
         </div>
     </div>
     <script src="JavaScript.js"></script>
