--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">help</a>
+                    <a class="nav-link" href="Help.html">help</a>
                 </div>
             </div>
         </div>
